--- a/environment.yaml
+++ b/environment.yaml
@@ -129,6 +129,7 @@ dependencies:
       - networkx==3.4.2
       - nltk==3.9.1
       - numpy==1.24.4
+      - nnsight==0.4.1
       - nvidia-cublas-cu12==12.4.5.8
       - nvidia-cuda-cupti-cu12==12.4.127
       - nvidia-cuda-nvrtc-cu12==12.4.127
