--- a/environment.yaml
+++ b/environment.yaml
@@ -114,6 +114,7 @@ dependencies:
       - imageio-ffmpeg==0.5.1
       - importlib-resources==6.4.5
       - iniconfig==2.0.0
+      - ipykernel==6.29.5
       - jaxtyping==0.2.36
       - jinja2==3.1.5
       - joblib==1.4.2
