--- a/environment.yaml
+++ b/environment.yaml
@@ -5,14 +5,29 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - _python_abi3_support=1.0=hd8ed1ab_2
+  - anthropic=0.55.0=pyhd8ed1ab_0
+  - anyio=4.7.0=py310h06a4308_0
   - asttokens=3.0.0=pyhd8ed1ab_1
+  - brotli-python=1.1.0=py310hf71b8c6_3
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.12.14=hbcca054_0
+  - ca-certificates=2025.6.15=hbd8a1cb_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cffi=1.17.1=py310h8deb56e_0
+  - colorama=0.4.6=pyhd8ed1ab_1
   - comm=0.2.2=pyhd8ed1ab_1
+  - cpython=3.10.18=py310hd8ed1ab_0
   - debugpy=1.8.11=py310hf71b8c6_0
   - decorator=5.1.1=pyhd8ed1ab_1
+  - distro=1.9.0=py310h06a4308_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_1
+  - h2=4.2.0=pyhd8ed1ab_0
+  - hf-xet=1.1.5=py39h260a9e5_3
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - huggingface_hub=0.33.1=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
   - importlib-metadata=8.5.0=pyha770c72_1
   - ipykernel=6.29.5=pyh3099207_0
   - ipython=8.31.0=pyh707e725_0
@@ -33,7 +48,7 @@ dependencies:
   - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - openssl=3.4.0=hb9d3cd8_0
+  - openssl=3.5.0=h7b32b05_1
   - packaging=24.2=pyhd8ed1ab_2
   - parso=0.8.4=pyhd8ed1ab_1
   - pexpect=4.9.0=pyhd8ed1ab_1
@@ -43,10 +58,14 @@ dependencies:
   - prompt-toolkit=3.0.48=pyha770c72_1
   - ptyprocess=0.7.0=pyhd8ed1ab_1
   - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pycparser=2.22=pyh29332c3_1
   - pygments=2.18.0=pyhd8ed1ab_1
+  - pysocks=1.7.1=pyha55dd90_7
   - python=3.10.15=he870216_1
   - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-gil=3.10.18=hd8ed1ab_0
   - python_abi=3.10=2_cp310
+  - pyyaml=6.0.2=py310h89163eb_2
   - readline=8.2=h5eee18b_0
   - setuptools=75.1.0=py310h06a4308_0
   - six=1.17.0=pyhd8ed1ab_0
@@ -55,10 +74,13 @@ dependencies:
   - tk=8.6.14=h39e8969_0
   - tornado=6.4.2=py310ha75aee5_0
   - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
+  - typing-extensions=4.12.2=py310h06a4308_0
+  - typing-inspection=0.4.0=py310h06a4308_0
+  - typing_extensions=4.12.2=py310h06a4308_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - wheel=0.44.0=py310h06a4308_0
   - xz=5.4.6=h5eee18b_1
+  - yaml=0.2.5=h7f98852_2
   - zeromq=4.3.5=h3b0a872_7
   - zipp=3.21.0=pyhd8ed1ab_1
   - zlib=1.2.13=h5eee18b_1
@@ -68,7 +90,6 @@ dependencies:
       - aiohttp==3.11.11
       - aiosignal==1.3.2
       - annotated-types==0.7.0
-      - anyio==4.7.0
       - async-timeout==5.0.1
       - attrs==24.3.0
       - automated-interpretability==0.0.6
@@ -76,6 +97,7 @@ dependencies:
       - beartype==0.14.1
       - beautifulsoup4==4.12.3
       - better-abc==0.0.3
+      - bidict==0.23.1
       - blobfile==2.1.1
       - boostedblob==0.15.5
       - certifi==2024.8.30
@@ -86,6 +108,7 @@ dependencies:
       - contourpy==1.3.1
       - cycler==0.12.1
       - datasets==2.21.0
+      - diffusers==0.34.0
       - dill==0.3.8
       - docker-pycreds==0.4.0
       - docstring-parser==0.16
@@ -114,23 +137,25 @@ dependencies:
       - imageio-ffmpeg==0.5.1
       - importlib-resources==6.4.5
       - iniconfig==2.0.0
-      - ipykernel==6.29.5
       - jaxtyping==0.2.36
       - jinja2==3.1.5
+      - jiter==0.10.0
       - joblib==1.4.2
       - kiwisolver==1.4.8
       - lxml==4.9.4
       - markdown-it-py==3.0.0
       - markupsafe==3.0.2
       - matplotlib==3.10.0
+      - mdmm==0.1.3
       - mdurl==0.1.2
       - mpmath==1.3.0
+      - msgspec==0.19.0
       - multidict==6.1.0
       - multiprocess==0.70.16
       - networkx==3.4.2
       - nltk==3.9.1
-      - numpy==1.24.4
       - nnsight==0.4.1
+      - numpy==1.24.4
       - nvidia-cublas-cu12==12.4.5.8
       - nvidia-cuda-cupti-cu12==12.4.127
       - nvidia-cuda-nvrtc-cu12==12.4.127
@@ -161,12 +186,12 @@ dependencies:
       - pydantic==2.10.4
       - pydantic-core==2.27.2
       - pyparsing==3.2.1
-      - pysocks==1.7.1
       - pytest==8.3.4
       - pytest-profiling==1.8.1
       - python-dotenv==1.0.1
+      - python-engineio==4.12.2
+      - python-socketio==5.13.0
       - pytz==2024.2
-      - pyyaml==6.0.2
       - pyzmq==26.0.0
       - regex==2024.11.6
       - requests==2.32.3
@@ -183,6 +208,7 @@ dependencies:
       - setproctitle==1.3.4
       - shellingham==1.5.4
       - simple-parsing==0.1.6
+      - simple-websocket==1.1.0
       - smmap==5.0.1
       - sniffio==1.3.1
       - soupsieve==2.6
@@ -193,8 +219,10 @@ dependencies:
       - threadpoolctl==3.5.0
       - tiktoken==0.6.0
       - tokenizers==0.21.0
+      - toml==0.10.2
       - tomli==2.2.1
       - torch==2.5.1
+      - torchvision==0.20.1
       - tqdm==4.67.0
       - transformer-lens==2.11.0
       - transformers==4.47.1
@@ -207,8 +235,9 @@ dependencies:
       - urllib3==2.2.3
       - uvloop==0.21.0
       - wandb==0.19.1
+      - websocket-client==1.8.0
+      - wsproto==1.2.0
       - xxhash==3.5.0
       - yarl==1.18.3
       - zstandard==0.22.0
-      - mdmm==0.1.3
-prefix: /homes/55/constantin/miniconda3/envs/simpler_env
+prefix: /root/miniconda/envs/simpler_env
