--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,7 @@ dependencies = [
     "tzdata>=2025.2",
     "urllib3>=2.5.0",
     "uvloop>=0.21.0",
+    "vllm>=0.1.2",
     "wandb>=0.21.3",
     "websocket-client>=1.8.0",
     "wsproto>=1.2.0",
