--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ dependencies = [
     "rtree>=1.4.1",
     "sae-lens>=6.10.0",
     "scikit-learn>=1.7.1",
+    "seaborn>=0.13.2",
     "sentencepiece>=0.2.1",
     "sentry-sdk>=2.35.2",
     "setproctitle>=1.3.6",
